@startuml
'https://plantuml.com/object-diagram

'Product'
package Product as Product{

Entity Product <<Root>>{
*id
--
-name
-photos
-base_price
}

object Description <<Value Object>>{
-short_description
-extended_description
}

object Barcode <<Value Object>>{
*barcode_id
--
-type_of_barcode
}

}

'-----------------------------------------'

'Brand'
package Brand as Brand{
Entity Brand <<Root>>{
*brand_id
--
-name
-reference
}

}

'-----------------------------------------'

'Category'

package Category as Category{

Entity Category <<Root>>{
*category_id
--
-description
}

}

'-----------------------------------------'

'WareHouse'
package Warehouse as Warehouse{

object Plant_Info<<Value Object>>{
-type_of_plant
}
Entity Warehouse <<Root>>{
*id
}

object Aisle<<Value Object>>{
}

object Row<<Value Object>>{
}

object Shelf<<Value Object>>{
}

object Bin<<Value Object>>{
-size
}

}

'-----------------------------------------'

'Customer'
package Customer as Customer{

Entity Customer <<Root>>{
*VAT
__
-name
-birth_date
-gender
-phone_number
+email
}

object Billing_Address <<Value Object>>{
*address
--
-country
}

object Delivering_Address <<Value Object>>{
*address
--
-country
-tax
}

object Validation<<Value Object>>{
 -email
 -phone_number
 }

object Shopping_Cart<<Value Object>>{
  *id
  --
  +customer_id
}

object Product_Quantities<<Value Object>>{
 -quantity
 }

}

'-----------------------------------------'

'Order'
package Order as Order{
Entity Order <<Root>>{
*id
--
-order_state
-date_time
+address
}

object Payment_Method<<Value Object>>{
*payment_type_id
--
-payment_type
}

object Shipment_Method<<Value Object>>{
*method_id
--
-method
-cost
}

Entity Carrier {
 *company_id
}

object Price <<Value Object>>{
  -base_price
  -final_price_with_tax
}

}

'-----------------------------------------'


Entity Salesclerk{
*id
--
-name
}

'AGV'
package AGV as AGV{
Entity AGV <<Root>>{
*id
--
-short_description
-model
-maximum_weight
}

object Location<<Value Object>>{
*location_id
--
-location
}

object Status<<Value Object>>{
-time_left
-task
}

object Task<<Value Object>>{

}

}

'-----------------------------------------'


Entity Warehouse_Employee {
*id
--
-name
}



Entity Questionnaire {

}

object Section<<Value Object>> {
-mandatory
}

object Question<<Value Object>> {
-mandatory
}

object Question_Type<<Value Object>> {

}
object Answer<<Value Object>> {

}

Order -- Price
Product -- Description
Product "1..N" -- Category
Product -- Barcode
Product -- Brand
Customer -- "1..N" Billing_Address
Customer -- "1..N" Delivering_Address
Customer <- "1..N" Order
Product - "1..N" Order
Order -- Shipment_Method
Shopping_Cart - "1..N" Product_Quantities
Shopping_Cart -- "1..1" Customer
Order -- Payment_Method
Customer -- Validation : undergoes
Salesclerk "0..1" <-- "1..N" Order : registers
Warehouse -right- "1..N" Aisle : \t
Aisle -right- "1..N" Row : \t
Row -right- "1..N" Shelf : \t
Shelf -right- "1..N" Bin : \t
Plant_Info "1..N" -- Warehouse: \t
AGV "1..N" -- Location : \t
AGV -- Status\t
AGV "1..N" -right- Warehouse : \t belongs \t
Task "1..N" --> AGV\t
Task -> Order\t
Warehouse_Employee <-- "1..N" Task : creates, inspects and packages the products
Order "1..N" -- Carrier
Questionnaire -down- "1..N" Section
Section -- "1..N" Question : \t
Question -- "1..N" Answer
Question - Question
Question_Type -- Question
Customer -- Questionnaire
Warehouse -- Product
@enduml